# FastFlowTransform

./: .gitignore  .pre-commit-config.yaml  CNAME  Combined.md  Contributing.md  License  Makefile  Makefile.built  Makefile.dev  Makefile.pipeline  README.md  Technical_Overview.md  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini
.flowforge/cache/: dev-duckdb.json
.github/workflows/: ci.yml  pages.yml  release.yml
_scripts/: concat_docs.py  export_subdir_md.py
docs/: Api_Models.md  Auto_Docs.md  CI_Check.md  CLI_Guide.md  Cache_and_Parallelism.md  Config_and_Macros.md  Contributing.md  Cost_Monitoring.md  Data_Quality_Tests.md  Hooks.md  Incremental.md  Logging.md  Packages.md  Profiles.md  Project_Config.md  Quickstart.md  Snapshots.md  Source_Freshness.md  Sources.md  State_Selection.md  Technical_Overview.md  Troubleshooting.md  Unit_Tests.md  YAML_Tests.md  dag.mmd  index.md  license.md
docs/_scripts/: gen_api.py
docs/examples/: API_Demo.md  Basic_Demo.md  Cache_Demo.md  DQ_Demo.md  Environment_Matrix.md  Hooks_Demo.md  Incremental_Demo.md  Local_Engine_Setup.md  Macros_Demo.md  Materializations_Demo.md  Packages_Demo.md  Snapshot_Demo.md
examples/: .env.dev_postgres
examples/_scripts/: cleanup_env.py
examples/api_demo/: .env  .env.dev_bigquery_pandas  .env.dev_databricks  .env.dev_duckdb  .env.dev_postgres  .env.dev_snowflake  Makefile  profiles.yml  project.yml  sources.yml
examples/basic_demo/: .env.dev_bigquery_bigframes  .env.dev_databricks  .env.dev_duckdb  .env.dev_postgres  .env.dev_snowflake  Makefile  README.md  profiles.yml  project.yml  sources.yml
examples/cache_demo/: .env.dev_bigquery_bigframes  .env.dev_bigquery_pandas  .env.dev_databricks  .env.dev_duckdb  .env.dev_postgres  .env.dev_snowflake  Makefile  README.md  budgets.yml  profiles.yml  project.yml  sources.yml
examples/ci_demo/: .env.dev_bigquery_pandas  .env.dev_duckdb  .env.dev_postgres  .env.dev_snowflake  Makefile  profiles.yml  project.yml
examples/dq_demo/: .env.dev_bigquery_pandas  .env.dev_databricks  .env.dev_duckdb  .env.dev_postgres  .env.dev_snowflake  Makefile  README.md  profiles.yml  project.yml  sources.yml
examples/env_matrix/: .env  .env.dev  .env.prod  .env.stg  Makefile  profiles.yml  project.yml  sources.yml
examples/events_users_duckdb/: Makefile  README.md  profiles.yml  project.yml  sources.yml
examples/hooks_demo/: .env.dev_bigquery_pandas  .env.dev_databricks  .env.dev_duckdb  .env.dev_postgres  .env.dev_snowflake  Makefile  profiles.yml  project.yml  sources.yml
examples/incremental_demo/: .env.dev_bigquery_pandas  .env.dev_databricks  .env.dev_databricks_delta  .env.dev_databricks_iceberg  .env.dev_databricks_parquet  .env.dev_duckdb  .env.dev_postgres  .env.dev_snowflake  Makefile  README.md  profiles.yml  project.yml  sources.yml
examples/macros_demo/: .env.dev_bigquery_bigframes  .env.dev_bigquery_pandas  .env.dev_databricks  .env.dev_duckdb  .env.dev_postgres  .env.dev_snowflake  Makefile  README.md  profiles.yml  project.yml  sources.yml
examples/materializations_demo/: .env.dev_bigquery_bigframes  .env.dev_bigquery_pandas  .env.dev_databricks  .env.dev_duckdb  .env.dev_postgres  .env.dev_snowflake  Makefile  profiles.yml  project.yml  sources.yml
examples/packages_demo/: .gitignore
examples/postgres/: Makefile  profiles.yml  project.yml  sources.yml
examples/simple_duckdb/: Makefile  profiles.yml  project.yml  sources.yml
examples/snapshot_demo/: .env.dev_bigquery_bigframes  .env.dev_bigquery_pandas  .env.dev_databricks  .env.dev_databricks_delta  .env.dev_databricks_iceberg  .env.dev_databricks_parquet  .env.dev_duckdb  .env.dev_postgres  .env.dev_snowflake  Makefile  README.md  profiles.yml  project.yml  sources.yml
examples/streaming_demo/: events.jsonl
examples_article/building_locally_demo/: .env.prod_bigquery  profiles.yml  project.yml  sources.yml
examples_article/http_cache_demo/: profiles.yml  project.yml
exports/: Combined.md
site/dag/: dag.mmd
src/: .pre-comig-config.yaml
src/fastflowtransform/: .env  .env.example  __init__.py  artifacts.py  cache.py  core.py  dag.py  decorators.py  docs.py  errors.py  incremental.py  logging.py  meta.py  packages.py  run_executor.py  schema_loader.py  seeding.py  settings.py  source_freshness.py  storage.py  test_registry.py  testing.py  typing.py  utest.py  validation.py
src/flowforge/: __init__.py  _version.py  cache.py  cli.py  core.py  dag.py  decorators.py  docs.py  errors.py  fingerprint.py  log_queue.py  meta.py  run_executor.py  seeding.py  settings.py  streaming.py  testing.py  utest.py  validation.py
tests/: .env.dev_databricks  .env.dev_duckdb  .env.dev_postgres  README.md  conftest.py
tests/api/: test_http_cache_modes.py  test_http_offline_cache.py  test_http_pagination_df.py
tests/artifacts/: test_catalog_duckdb.py  test_manifest.py  test_run_result.py
tests/cli/: test_summary_params_and_sql.py  test_test_cmd_output_marks.py  test_test_cmd_schema_merge.py
tests/common/: conftest.py  fixtures.py  snapshot_helpers.py  utils.py
tests/integration/: test_artifacts_e2e.py  test_artifacts_integration.py  test_buildins_var_this.py  test_cli_vars_flag.py  test_executor_meta_hook_duckdb.py  test_incremental_duckdb_smoke.py  test_meta_postgres.py  test_profiles_validation.py  test_python_model_dependencies.py  test_schema_yaml_basic.py  test_schema_yaml_registry_mix.py  test_seeding.py  test_smoke_duckdb.py  test_smoke_postgres.py  test_smoke_streaming.py  test_state_modified_integration.py  test_version.py
tests/render/: test_this_proxy.py  test_this_relation.py
tests/schema/: test_schema_loader.py
tests/selectors/: test_state_modified_unit.py
tests/test_registry/: test_dispatch.py
tests/testing/: test_accepted_values_unit.py
tests/unit/: test_cache_policy_cli.py  test_cache_skip_logic.py  test_cache_store.py  test_cli_init.py  test_cli_select.py  test_config_hook.py  test_config_vars_macros.py  test_core_python_tags.py  test_docgen_site.py  test_docs_materialization_badges.py  test_docs_merge.py  test_executor_meta_hook_smoke.py  (+22 more)
(+417 files in other folders)
